CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(cactus )
set(CMAKE_USE_RELATIVE_PATHS ON)
set (CMAKE_CXX_STANDARD 11)
set(PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/..")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)


set_property(GLOBAL PROPERTY USE_FOLDERS ON) 
if(PASSOA_MAIN)
ADD_SUBDIRECTORY(src)
endif()
if(PASSOA_MAKE_TEST)
ADD_SUBDIRECTORY(test)
endif()
